--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="assets/styles/main.scss">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.scss">
 </head>
 
 <body>
@@ -14,11 +14,11 @@ Software Developer
 </div>
 <div class="images">
 
-  
 
-<a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="assets/images/LinkedIn.png" alt="LinkedIn" /></a>
-<a href="https://www.github.com/marcellawigg"><img class="image" src="assets/images/GitHub.png" alt="Github" /></a>
-<a href="mailto:marcellakathrynwigg@gmail.com?Subject=Professional%20Opportunities"><img class="image" src="assets/images/Email.png" alt="Email" />
+
+<a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="{{ site.baseurl }}/images/LinkedIn.png" alt="LinkedIn" /></a>
+<a href="https://www.github.com/marcellawigg"><img class="image" src="{{ site.baseurl }}/images/GitHub.png" alt="Github" /></a>
+<a href="mailto:marcellakathrynwigg@gmail.com?Subject=Professional%20Opportunities"><img class="image" src="{{ site.baseurl }}/images/Email.png" alt="Email" />
 </div>
 
 </center></body>
