Styling for pages still not showing up

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/main.scss">
+  <link rel="stylesheet" type="text/css" href="css/main.scss">
 </head>
 
 <body>
@@ -16,9 +16,9 @@ Software Developer
 
 
 
-<a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="/images/LinkedIn.png" alt="LinkedIn" /></a>
-<a href="https://www.github.com/marcellawigg"><img class="image" src="/images/GitHub.png" alt="Github" /></a>
-<a href="mailto:marcellakathrynwigg@gmail.com?Subject=Professional%20Opportunities"><img class="image" src="/images/Email.png" alt="Email" />
+<a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="images/LinkedIn.png" alt="LinkedIn" /></a>
+<a href="https://www.github.com/marcellawigg"><img class="image" src="images/GitHub.png" alt="Github" /></a>
+<a href="mailto:marcellakathrynwigg@gmail.com?Subject=Professional%20Opportunities"><img class="image" src="images/Email.png" alt="Email" />
 </div>
 
 </center></body>
