--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="css/main.scss">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
