--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html manifest="mysite.appcache">
 <head>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -13,8 +13,6 @@ Marcella Wigg
 Software Developer
 </div>
 <div class="images">
-
-
 
 <a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="images/LinkedIn.png" alt="LinkedIn" /></a>
 <a href="https://www.github.com/marcellawigg"><img class="image" src="images/GitHub.png" alt="Github" /></a>
