Still Work in Progress. Need to work on this weekend.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <body>
 <center>
 <div class="logo">
-Marcella Wigg
+<hr>
+Hi, my name is Marcella Wigg. <br>I'm a software developer.
+<!-- <a href="google.com" class="link">*</a> -->
+<hr>
 </div>
-<div class="title">
-Software Developer
-</div>
+
 <div class="images">
 
 <a href="https://www.linkedin.com/in/marcellawigg"><img class="image" src="images/LinkedIn.png" alt="LinkedIn" /></a>
